--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,13 @@ services:
     depends_on:
       - redis
     restart: unless-stopped
+  
+  watchdog:
+    build: .
+    command: python -m worker.watchdog
+    environment:
+      - REDIS_URL=redis://redis:6379/0
+    depends_on:
+      - redis
+    restart: unless-stopped
+
