--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,25 +7,56 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    services:
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping || exit 1"
+          --health-interval 5s
+          --health-timeout 3s
+          --health-retries 20
+
+    env:
+      REDIS_URL: redis://localhost:6379/0
+      API_KEY: dev
+      PYTHONUNBUFFERED: "1"
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt pytest
-      - name: Smoke tests
+
+      - name: Smoke test API (FastAPI TestClient)
         run: |
           python - <<'PY'
-          import json
+          import os, time
+          # wait a bit for Redis health
+          time.sleep(1)
           from api.main import app
           from fastapi.testclient import TestClient
           c = TestClient(app)
-          assert c.get("/healthz").status_code == 200
-          r = c.post("/v1/jobs", json={"type":"text.reverse","payload":{"text":"ci"}})
+
+          # healthz should pass and ping Redis
+          r = c.get("/healthz")
+          assert r.status_code == 200, r.text
+
+          # create job (uses Redis pipeline)
+          r = c.post("/v1/jobs", json={"type":"text.reverse","payload":{"text":"ci"}, "priority":"high"})
+          assert r.status_code == 200, r.text
           jid = r.json()["job_id"]
-          assert c.get(f"/v1/jobs/{jid}").status_code == 200
-          print("OK")
+
+          # job exists
+          r = c.get(f"/v1/jobs/{jid}")
+          assert r.status_code == 200, r.text
+          print("Smoke OK")
           PY
